# healthbridge

./: README.md  biome.json  index.ts  package.json  turbo.json
app/admin/: package.json  vite.config.ts
app/admin/src/: App.tsx  main.tsx
app/admin/src/lib/: api.ts
app/admin/src/pages/: Login.tsx
app/backend/: env.ts  index.ts  package.json  tsconfig.json
app/backend/config/: mongodb.ts
app/backend/controllers/: adminController.ts  doctorController.ts  userController.ts
app/backend/middlewares/: authAdmin.ts  authDoctor.ts  authUser.ts
app/backend/models/: appointmentModel.ts  doctorModel.ts  userModel.ts
app/backend/routes/: adminRoute.ts  userRoute.ts
app/backend/src/: env.ts  index.ts  server.ts
app/backend/src/config/: mongodb.ts  (+1 more)
app/backend/types/: express.d.ts
app/frontend/: autoTemplate.ts  package.json  tsconfig.app.json  tsconfig.node.json
app/frontend/src/: App.tsx  index.css  main.tsx
app/ml/: .gitignore  README.md  pyproject.toml
app/ml/backend/: main.py
app/ml/models/: disease_predictor.py
apps/admin/: index.html
apps/admin/src/: App.tsx  index.css
apps/backend/: package.json
apps/backend/src/: env.ts  index.ts
apps/frontend/: index.html  package.json  tsconfig.node.json  vite.config.ts
apps/frontend/src/: App.tsx  main.tsx
apps/ml/: README.md  package.json  pyproject.toml
apps/ml/backend/: main.py
apps/ml/models/: disease_predictor.py  helper.py
backend/: package.json
frontend/: package.json
frontend/src/: index.css
frontend/src/components/: Footer.tsx  Navbar.tsx
frontend/src/pages/: Profile.tsx
(+119 files in other folders)
